--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+<!--  카메라 권한  -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+<!--  저장소 읽기 권한  -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+<!--  저장소 쓰기 권한  -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+<!--  카메라 사용하기 위한 필수 설정  -->
+    <uses-feature android:name="android.hardware.camera"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
